config readability and several textures have been improved

--- a/src/main/resources/assets/cleanertooltips/lang/en_us.json
+++ b/src/main/resources/assets/cleanertooltips/lang/en_us.json
@@ -1,4 +1,4 @@
 {
-  "cleanertooltips.configuration.modEnabled": "Cleaner Tooltips",
-  "cleanertooltips.configuration.addSharpness": "Sharpness value"
+  "cleanertooltips.configuration.enabled": "Cleaner Tooltips",
+  "cleanertooltips.configuration.sharpness": "Include Sharpness"
 }
