added the option to display durability on the tooltip

--- a/src/main/resources/assets/cleanertooltips/lang/en_us.json
+++ b/src/main/resources/assets/cleanertooltips/lang/en_us.json
@@ -1,4 +1,5 @@
 {
   "cleanertooltips.configuration.enabled": "Cleaner Tooltips",
-  "cleanertooltips.configuration.sharpness": "Include Sharpness"
+  "cleanertooltips.configuration.sharpness": "Include Sharpness",
+  "cleanertooltips.configuration.durability": "Display Durability"
 }
