added the option to change the keybind for hiding the cleaner tooltips

--- a/src/main/resources/assets/cleanertooltips/lang/en_us.json
+++ b/src/main/resources/assets/cleanertooltips/lang/en_us.json
@@ -1,5 +1,7 @@
 {
   "cleanertooltips.configuration.enabled": "Cleaner Tooltips",
   "cleanertooltips.configuration.sharpness": "Include Sharpness",
-  "cleanertooltips.configuration.durability": "Display Durability"
+  "cleanertooltips.configuration.durability": "Display Durability",
+
+  "key.cleanertooltips.hide_tooltip": "Hide Cleaner Tooltips"
 }
