added the option to change the durability position

--- a/src/main/resources/assets/cleanertooltips/lang/en_us.json
+++ b/src/main/resources/assets/cleanertooltips/lang/en_us.json
@@ -2,6 +2,7 @@
   "cleanertooltips.configuration.enabled": "Cleaner Tooltips",
   "cleanertooltips.configuration.sharpness": "Include Sharpness",
   "cleanertooltips.configuration.durability": "Display Durability",
+  "cleanertooltips.configuration.durability_pos": "Durability Position",
 
   "key.cleanertooltips.hide_tooltip": "Hide Cleaner Tooltips"
 }
