--- a/src/main/resources/assets/cleanertooltips/lang/en_us.json
+++ b/src/main/resources/assets/cleanertooltips/lang/en_us.json
@@ -1,6 +1,6 @@
 {
   "cleanertooltips.configuration.enabled": "Cleaner Tooltips",
-  "cleanertooltips.configuration.sharpness": "Include Sharpness",
+  "cleanertooltips.configuration.sharpness": "Calculate Sharpness",
   "cleanertooltips.configuration.durability": "Display Durability",
   "cleanertooltips.configuration.durability_pos": "Durability Position",
 
