--- a/common/src/main/resources/assets/cleanertooltips/lang/de_de.json
+++ b/common/src/main/resources/assets/cleanertooltips/lang/de_de.json
@@ -1,24 +1,22 @@
 {
   "text.autoconfig.cleanertooltips.title": "Cleaner Tooltips Konfiguration",
 
-  "text.autoconfig.cleanertooltips.option.enabled": "Cleaner Tooltips",
-  "text.autoconfig.cleanertooltips.option.enabled.@Tooltip": "Ob Cleaner Tooltips aktiviert sein soll.",
+  "text.autoconfig.cleanertooltips.option.enabled": "Attribut Tooltips",
+  "text.autoconfig.cleanertooltips.option.enabled.@Tooltip": "Ob die Attribut-Tooltips aktiviert sein soll.",
   "text.autoconfig.cleanertooltips.option.sharpness": "Schärfe Berechnen",
   "text.autoconfig.cleanertooltips.option.sharpness.@Tooltip": "Soll Schärfe den Schaden verändern?",
   "text.autoconfig.cleanertooltips.option.hiddenAttributesHint": "Versteckte Attribute Hinweis",
   "text.autoconfig.cleanertooltips.option.hiddenAttributesHint.@Tooltip": "Ob auf versteckte Attribute hingewiesen werden soll.",
   "text.autoconfig.cleanertooltips.option.durability": "Haltbarkeit Anzeigen",
-  "text.autoconfig.cleanertooltips.option.durability.@Tooltip": "Soll die Haltbarkeit im Tooltip angezeigt werden?",
+  "text.autoconfig.cleanertooltips.option.durability.@Tooltip": "Soll die Haltbarkeit von Items im Tooltip angezeigt werden?",
   "text.autoconfig.cleanertooltips.option.durabilityPos": "Haltbarkeit Position",
-  "text.autoconfig.cleanertooltips.option.durabilityPos.@Tooltip[0]": "Optionen:",
-  "text.autoconfig.cleanertooltips.option.durabilityPos.@Tooltip[1]": "Stelle auf INLINE um die Haltbarkeit neben den Attributen anzuzeigen.",
-  "text.autoconfig.cleanertooltips.option.durabilityPos.@Tooltip[2]": "Stelle auf BOTTOM um die Haltbarkeit am ende des Tooltips anzuzeigen.",
-  "text.autoconfig.cleanertooltips.option.durabilityPos.@Tooltip[3]": "Stelle auf BELOW um die Haltbarkeit under den Attributen anzuzeigen.",
+  "text.autoconfig.cleanertooltips.option.durabilityPos.@Tooltip[0]": "Wähle die Position für die Haltbarkeit.",
+  "text.autoconfig.cleanertooltips.option.durabilityPos.@Tooltip[1]": "Hinweis: wenn Attribut-Tooltips deaktiviert sind,\nwerden sowohl INLINE als auch BELOW unter dem Namen angezeigt.",
   "text.autoconfig.cleanertooltips.option.durabilityColor": "Haltbarkeit Farbe",
   "text.autoconfig.cleanertooltips.option.durabilityColor.@Tooltip": "Soll die Farbe sich je nach Haltbarkeit ändern?",
 
   "text.autoconfig.cleanertooltips.option.enabled.@PrefixText": "Allgemein",
   "text.autoconfig.cleanertooltips.option.durability.@PrefixText": "Haltbarkeit",
 
-  "key.cleanertooltips.hide_tooltip": "Cleaner Tooltips verstecken"
+  "key.cleanertooltips.hide_tooltip": "Attribut-Tooltips verstecken"
 }
