--- a/common/src/main/resources/assets/cleanertooltips/lang/en_us.json
+++ b/common/src/main/resources/assets/cleanertooltips/lang/en_us.json
@@ -1,24 +1,22 @@
 {
   "text.autoconfig.cleanertooltips.title": "Cleaner Tooltips Config",
 
-  "text.autoconfig.cleanertooltips.option.enabled": "Cleaner Tooltips",
-  "text.autoconfig.cleanertooltips.option.enabled.@Tooltip": "Whether Cleaner Tooltips should be enabled.",
+  "text.autoconfig.cleanertooltips.option.enabled": "Attribute Tooltips",
+  "text.autoconfig.cleanertooltips.option.enabled.@Tooltip": "Whether the attribute tooltips should be enabled.",
   "text.autoconfig.cleanertooltips.option.sharpness": "Calculate Sharpness",
   "text.autoconfig.cleanertooltips.option.sharpness.@Tooltip": "Should sharpness change the damage value?",
   "text.autoconfig.cleanertooltips.option.hiddenAttributesHint": "Hidden Attributes Hint",
   "text.autoconfig.cleanertooltips.option.hiddenAttributesHint.@Tooltip": "Whether hidden attributes should be hinted at.",
   "text.autoconfig.cleanertooltips.option.durability": "Display Durability",
-  "text.autoconfig.cleanertooltips.option.durability.@Tooltip": "Should durability be displayed in the tooltip?",
+  "text.autoconfig.cleanertooltips.option.durability.@Tooltip": "Should the items durability be displayed in the tooltip?",
   "text.autoconfig.cleanertooltips.option.durabilityPos": "Durability Position",
-  "text.autoconfig.cleanertooltips.option.durabilityPos.@Tooltip[0]": "Options:",
-  "text.autoconfig.cleanertooltips.option.durabilityPos.@Tooltip[1]": "Set to INLINE to display the durability next to the attributes.",
-  "text.autoconfig.cleanertooltips.option.durabilityPos.@Tooltip[2]": "Set to BOTTOM to display the durability at the bottom of the tooltip.",
-  "text.autoconfig.cleanertooltips.option.durabilityPos.@Tooltip[3]": "Set to BELOW to display the durability below the attributes.",
+  "text.autoconfig.cleanertooltips.option.durabilityPos.@Tooltip[0]": "Choose the position of the durability.",
+  "text.autoconfig.cleanertooltips.option.durabilityPos.@Tooltip[1]": "Note: if attribute tooltips are disabled, then both INLINE\nand BELOW will be displayed below the item name.",
   "text.autoconfig.cleanertooltips.option.durabilityColor": "Durability Color",
   "text.autoconfig.cleanertooltips.option.durabilityColor.@Tooltip": "Should the color change depending on the remaining durability?",
 
   "text.autoconfig.cleanertooltips.option.enabled.@PrefixText": "General",
   "text.autoconfig.cleanertooltips.option.durability.@PrefixText": "Durability",
 
-  "key.cleanertooltips.hide_tooltip": "Hide Cleaner Tooltips"
+  "key.cleanertooltips.hide_tooltip": "Hide Attribute Tooltips"
 }
