--- a/common/src/main/resources/assets/cleanertooltips/lang/de_de.json
+++ b/common/src/main/resources/assets/cleanertooltips/lang/de_de.json
@@ -4,7 +4,7 @@
   "text.autoconfig.cleanertooltips.option.enabled": "Attribut Tooltips",
   "text.autoconfig.cleanertooltips.option.enabled.@Tooltip": "Ob die Attribut-Tooltips aktiviert sein soll.",
   "text.autoconfig.cleanertooltips.option.sharpness": "Schärfe Berechnen",
-  "text.autoconfig.cleanertooltips.option.sharpness.@Tooltip": "Soll Schärfe den Schaden verändern?",
+  "text.autoconfig.cleanertooltips.option.sharpness.@Tooltip": "Soll Schärfe den Schaden verändern? dies behebt MC-271840.",
   "text.autoconfig.cleanertooltips.option.hiddenAttributesHint": "Versteckte Attribute Hinweis",
   "text.autoconfig.cleanertooltips.option.hiddenAttributesHint.@Tooltip": "Ob auf versteckte Attribute hingewiesen werden soll.",
   "text.autoconfig.cleanertooltips.option.durability": "Haltbarkeit Anzeigen",
@@ -12,6 +12,8 @@
   "text.autoconfig.cleanertooltips.option.durabilityPos": "Haltbarkeit Position",
   "text.autoconfig.cleanertooltips.option.durabilityPos.@Tooltip[0]": "Wähle die Position für die Haltbarkeit.",
   "text.autoconfig.cleanertooltips.option.durabilityPos.@Tooltip[1]": "Hinweis: wenn Attribut-Tooltips deaktiviert sind,\nwerden sowohl INLINE als auch BELOW unter dem Namen angezeigt.",
+  "text.autoconfig.cleanertooltips.option.showMaximumDurability": "Maximale Haltbarkeit Anzeigen",
+  "text.autoconfig.cleanertooltips.option.showMaximumDurability.@Tooltip": "Soll die maximale haltbarkeit angezeigt werden?",
   "text.autoconfig.cleanertooltips.option.durabilityColor": "Haltbarkeit Farbe",
   "text.autoconfig.cleanertooltips.option.durabilityColor.@Tooltip": "Soll die Farbe sich je nach Haltbarkeit ändern?",
 
