--- a/common/src/main/resources/assets/cleanertooltips/lang/en_us.json
+++ b/common/src/main/resources/assets/cleanertooltips/lang/en_us.json
@@ -1,17 +1,17 @@
 {
   "text.autoconfig.cleanertooltips.title": "Cleaner Tooltips Config",
 
-  "text.autoconfig.cleanertooltips.option.enabled": "Attribute Tooltips",
-  "text.autoconfig.cleanertooltips.option.enabled.@Tooltip": "Whether the attribute tooltips should be enabled.",
+  "text.autoconfig.cleanertooltips.option.enabled": "Icon Attributes",
+  "text.autoconfig.cleanertooltips.option.enabled.@Tooltip": "Whether the icon attributes should be enabled.",
   "text.autoconfig.cleanertooltips.option.sharpness": "Calculate Sharpness",
   "text.autoconfig.cleanertooltips.option.sharpness.@Tooltip": "Should sharpness change the damage value? this fixes MC-271840.",
   "text.autoconfig.cleanertooltips.option.hiddenAttributesHint": "Hidden Attributes Hint",
   "text.autoconfig.cleanertooltips.option.hiddenAttributesHint.@Tooltip": "Whether hidden attributes should be hinted at.",
   "text.autoconfig.cleanertooltips.option.durability": "Display Durability",
-  "text.autoconfig.cleanertooltips.option.durability.@Tooltip": "Should the items durability be displayed in the tooltip?",
+  "text.autoconfig.cleanertooltips.option.durability.@Tooltip": "Should the durability of items be displayed in the tooltip?",
   "text.autoconfig.cleanertooltips.option.durabilityPos": "Durability Position",
   "text.autoconfig.cleanertooltips.option.durabilityPos.@Tooltip[0]": "Choose the position of the durability.",
-  "text.autoconfig.cleanertooltips.option.durabilityPos.@Tooltip[1]": "Note: if attribute tooltips are disabled, then both INLINE\nand BELOW will be displayed below the item name.",
+  "text.autoconfig.cleanertooltips.option.durabilityPos.@Tooltip[1]": "Note: if icon attributes are disabled, then both INLINE\nand BELOW will be displayed below the item name.",
   "text.autoconfig.cleanertooltips.option.showMaximumDurability": "Display Maximum Durability",
   "text.autoconfig.cleanertooltips.option.showMaximumDurability.@Tooltip": "Should the maximum durability be displayed?",
   "text.autoconfig.cleanertooltips.option.durabilityColor": "Durability Color",
