--- a/common/src/main/resources/assets/cleanertooltips/lang/en_us.json
+++ b/common/src/main/resources/assets/cleanertooltips/lang/en_us.json
@@ -7,8 +7,10 @@
   "text.autoconfig.cleanertooltips.option.sharpness.@Tooltip": "Should sharpness change the damage value? this fixes MC-271840.",
   "text.autoconfig.cleanertooltips.option.hiddenAttributesHint": "Hidden Attributes Hint",
   "text.autoconfig.cleanertooltips.option.hiddenAttributesHint.@Tooltip": "Whether hidden attributes should be hinted at.",
+  "text.autoconfig.cleanertooltips.option.miningSpeed": "Display Mining Speed",
+  "text.autoconfig.cleanertooltips.option.miningSpeed.@Tooltip": "Should the mining speed of tools be displayed?",
   "text.autoconfig.cleanertooltips.option.durability": "Display Durability",
-  "text.autoconfig.cleanertooltips.option.durability.@Tooltip": "Should the durability of items be displayed in the tooltip?",
+  "text.autoconfig.cleanertooltips.option.durability.@Tooltip": "Should the durability of items be displayed?",
   "text.autoconfig.cleanertooltips.option.durabilityPos": "Durability Position",
   "text.autoconfig.cleanertooltips.option.durabilityPos.@Tooltip[0]": "Choose the position of the durability.",
   "text.autoconfig.cleanertooltips.option.durabilityPos.@Tooltip[1]": "Note: if icon attributes are disabled, then both INLINE\nand BELOW will be displayed below the item name.",
